# claude-telegram-bridge

./: .env.example  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  claude-telegram.service  hook.py  pyproject.toml
src/claude_telegram/: __init__.py  bots.py  claude.py  config.py  main.py  markdown.py  telegram.py  topic.py  transcribe.py
tests/: conftest.py  test_claude.py  test_main.py  test_telegram.py  test_topic.py
