[project]
name = "claude-telegram-bridge"
version = "0.1.0"
description = "Control Claude Code remotely via Telegram — multi-session, permissions UI, voice, topics, and more"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    {name = "Thomas Chauvet"},
    {name = "Amit Mor"},
]
keywords = ["claude", "telegram", "claude-code", "remote", "bridge"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: FastAPI",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "fastapi>=0.128.0",
    "httpx>=0.28.1",
    "pydantic-settings>=2.12.0",
    "python-telegram-bot>=22.5",
    "tenacity>=9.1.2",
    "uvicorn>=0.40.0",
]

[project.urls]
Repository = "https://github.com/FreakySurgeon/claude-telegram-bridge"

[project.scripts]
claude-telegram = "claude_telegram.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/claude_telegram"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "respx>=0.22.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v"
pythonpath = ["src"]

[tool.coverage.run]
source = ["src/claude_telegram"]
omit = ["tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
]
